# core-lite

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PWC002_MIRROR_HANDOFF.md  README.md  README_v0.1.3_gllm_transition_bundle.md  SAFETY.md  STATUS.md  VERSION  iosnoperiod.md  requirements.txt  setup.cfg  task.md
agent_history/: llm_changelog.jsonl  version_state.json
agent_policy/: allowed_paths.json  forbidden_paths.json
automation/: stegguardian-workflow-install-request.json
config/: authority_decision_request_policy.json  core_policy.json  destination_admissibility_policy.json  ecosystem_self_management_policy.json  explicit_grant_request_policy.json  grant_review_policy.json  heartbeat_policy.json  install_decision_policy.json  management_action_candidate_policy.json  management_action_review_policy.json  management_package_intake_policy.json  management_package_retrieval_policy.json  management_reviewer_authority_policy.json  package_registry.json  promotion_gate_policy.json  quorum_readiness_request_policy.json  quorum_readiness_review_policy.json  repo_structure_targets.json  tv_manifest.yml
contracts/: runner-consumption-contract.json  stegguardian-mock-resolver-contract.json  stegguardian-state-lookup-contract.json  stegguardian-store-mapping.json
core_lite/: __init__.py  cge.py  cli.py  ingest.py  intake.py  receipts.py
data/: stegguardian-adapter-tasks.json
docs/: ADAPTER_EVALUATION_SEAM.md  AUTHORITY_DECISION_REVIEW_POLICY.md  AUTOMATION_PROCESSOR_STATUS.md  CORE_LITE_CONTINUATION_FROM_CHAT.md  CORE_LITE_MIRROR_HANDOFF.md  DECISION_VALUES.md  (+57 more)
(+378 files in other folders)
