[metadata]
name = stegverse-002-core-lite
version = 1.0.0
description = StegVerse-002 Core-Lite governed AI/intellect block

[options]
packages = find:
python_requires = >=3.11
install_requires =
    PyYAML>=6.0

[options.packages.find]
include =
    core_lite*
    tools*

[options.entry_points]
console_scripts =
    sv002 = core_lite.cli:main
